# wallpaper-app

./: Cargo.toml  README.md
src/: drawing.rs  lib.rs
src/drawing/: beauty_math.rs  colors.rs  primitives.rs
