[package]
name = "wallpaper-app"
version = "0.1.0"
edition = "2021"
description = "This library provides the functionality to create your own application, displayed as a desktop wallpaper"
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "libloaderapi", "errhandlingapi", "impl-default"] }
