[package]
name = "wallpaper-app"
version = "0.1.8"
edition = "2021"
description = "This library provides the functionality to create your own application, displayed as a desktop wallpaper"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/KiritoMC03/wallpaper-app"
keywords = ["wallpaper", "desktop"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "libloaderapi", "errhandlingapi", "impl-default"] }
